# localsolana-contracts

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  rust-toolchain.toml  setup.sh  tsconfig.json
docs/: borsch.md  contract_reqs.md  dual-naming.md  init-if-needed.md  learnings-spl.md  local-testing.md  notes.md  rust-analyzer.toml  seedstrue.md  simple-example-that-builds-more-advanced-bumps-spl.rs  simple-example-that-builds.rs
programs/localsolana_contracts/: Cargo.toml
programs/localsolana_contracts/src/: lib.rs
scripts/: consolidateUSDCBalances.sh  deriveTokenAddress.ts  generate-events.ts  getBalances.sh  inspectEscrow.js  pubKeyBytes.js
tests/: fund-accounts.ts  fund-accounts.ts-disable  localsolana-contracts-2025.ts  localsolana-contracts.ts  localsolana-contracts.ts-dotenv
